# django-searchable

./: LICENSE.txt  Pipfile  README.rst  manage.py  pyproject.toml  release.py  setup.py  test_django_search.py
django_search/: models.py
django_searchable/: exceptions.py  models.py
tests/: models.py  settings.py  test_django_search.py
